# PennPalGPT

./: Milestone 3 - Presentation Draft.pptx  README.md  grouping_professors.ipynb  professor_research_results.csv  pyproject.toml  results_knn.csv  score.py
Milestone 4 Submission/: Milestone 4.pptx
Milestone 4 Submission/code/: README.md  feature_generation.ipynb  feature_importance_analysis_and_eval.ipynb  feature_transformation.ipynb  grouping_professors.ipynb  score.py
Milestone 4 Submission/code/error_analysis/: error_analysis.ipynb  knn_results_scores_analysis_prev_milestone.csv  knn_results_scores_dev_analysis.csv
Milestone 4 Submission/data/: README.md
Milestone 4 Submission/data/data_for_feature_analysis/: question_matrices.csv  results_random_forest.csv
Milestone 4 Submission/data/dev_and_test/: dev.csv  test.csv
Milestone 4 Submission/data/dev_and_test_transformed/: dev_matrices.csv  test_matrices.csv
Milestone 4 Submission/data/generated_features_and_professor_data/: data_professors.csv  generated_features.csv  generated_features.xlsx
Milestone 4 Submission/outputs/: README.md  knn_results_scores_dev.csv  knn_results_scores_test.csv  results_knn_dev.csv  results_knn_test.csv
Milestone3/: 530_project_test_dev.xlsx  Milestone 3 Writeup.docx  README.md  data_professors.csv  feature_generation.ipynb  feature_transformation_for_test.ipynb
