[tool.poetry]
name = "document-ingest"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "document-ingest"}]

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.0.323"
sentence-transformers = "^2.2.2"
chromadb = "^0.4.15"
unstructured = {extras = ["pdf"], version = "^0.11.2"}
nltk = "^3.8.1"
certifi = "^2023.7.22"
openai = "0.28.1"
faiss-cpu = "^1.7.4"
tiktoken = "^0.5.1"
docx2txt = "^0.8"
poppler-utils = "^0.1.0"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

